# tick

./: README.md  setup.cfg
tick/: config.yaml  constants.py  interface.py  main.py  task.py  utils.py
