[metadata]
name = tick
author = Jesse Constante
author-email = jglconstante@gmail.com
summary = Task Integration CLI (works with Atlassian products)
description-file =
    README.md
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Other/Nonlisted Topic

[options.entry_points]
console_scripts =
    tick = tick.main:app

[files]
packages = tick

[options]
include_package_data = True
packages = tick
python_requires = >=3.6
install_requires =
    PyYAML
    typer
    atlassian-python-api
    click
    rich
